# teale-mono

./: .gitignore  CLAUDE.md  Cargo.toml  Package.resolved  Package.swift  README.md  Supabase.plist.template  bundle.sh
.github/workflows/: gateway-deploy.yml  linux-desktop.yml  mac-app-release.yml  mac-app-testflight.yml  mac-app.yml  relay.yml  rust.yml  windows-installer.yml
Sources/AgentKit/: AgentConversation.swift  AgentDirectory.swift  AgentIdentity.swift  AgentManager.swift  AgentNegotiator.swift  AgentRouter.swift  AgentVerifier.swift
Sources/AppCore/: AppState.swift  BuildVersion.swift  RemoteControlBridge.swift
Sources/AuthKit/: AuthManager.swift  SupabaseConfig.swift
Sources/ChatKit/: ChatKit.swift
Sources/ClusterKit/: ClusterProvider.swift
Sources/CreditKit/: CreditAnalytics.swift  CreditLedger.swift  CreditMiddleware.swift  CreditTypes.swift  CreditWallet.swift
Sources/HardwareProfile/: NetworkMonitor.swift  ThermalMonitor.swift
Sources/InferenceEngine/: AdaptiveThrottler.swift  ContributionSchedule.swift  InferenceEngineManager.swift
Sources/InferencePoolApp/: AppState.swift  InferencePoolApp.swift  Info.plist  Localization.swift
Sources/LocalAPI/: APIKeyStore.swift  AuthMiddleware.swift  HTTPServer.swift  RemoteControlRoute.swift  RemoteControlTypes.swift
Sources/MLXInference/: HFDownloader.swift  MLXProvider.swift
Sources/ModelManager/: LocalModelScanner.swift  ModelCatalog.swift  ModelManagerService.swift
Sources/SharedTypes/: APITypes.swift  AuthTypes.swift  BuildVersion.swift  ChatTypes.swift  HardwareTypes.swift  ModelDescriptor.swift
Sources/SolairCompanion/: CompanionAppState.swift  SolairCompanionApp.swift
Sources/TealeCLI/: CLIHelpers.swift  TealeClient.swift
Sources/TealeCompanion/: CompanionAppState.swift  Info.plist  TealeCompanionApp.swift
Sources/TealeSDK/: ConsentManager.swift  ContributionOptions.swift  EarningsReporter.swift  SDKWANBridge.swift  TealeContributor.swift
Sources/TealeSDKUI/: EarningsDashboardView.swift
Sources/WANKit/: NATTraversal.swift  QUICTransport.swift  RelayClient.swift  RelayPeerConnection.swift  STUNClient.swift  WANConfiguration.swift  WANDiscovery.swift  WANManager.swift  WANProvider.swift  WireGuardTransport.swift
Sources/WalletKit/: Base58.swift  CreditAmount+USD.swift  DepositMonitor.swift  WalletBridge.swift
Tests/WANKitTests/: WANKitTests.swift
android-app/: .gitignore  README.md  SIDELOAD.md  gradle.properties  settings.gradle.kts
chats/: 2026-04-05.md  2026-04-06.md  2026-04-07.md  2026-04-08.md
docs/: cluster-runner.md  deepseek-v4-exo-benchmarks.md  device-earnings-cards.md  device-model-matrix.md  mac-fleet-configurations.md  mesh-llm-backend-evaluation.md  openrouter-application-rehearsal.md  openrouter-oncall-runbook.md  openrouter-open-weight-catalog.md  openrouter-provider-gap-analysis.md  provider-marketplace.md  windows-companion-auth.md
gateway/: Cargo.toml  Dockerfile  fly.toml  gateway.toml  models.yaml
gateway/scripts/: README.md  patch-kimi-supplier-reasoning.py  patch-kimi-supplier-thinking.py
gateway/src/: api_keys.rs  auth.rs  catalog.rs  config.rs  db.rs  error.rs  ledger.rs  lib.rs  main.rs  metrics.rs  model_metrics.rs  probe.rs  registry.rs  relay_client.rs  router.rs  scheduler.rs  solana.rs  state.rs
gateway/src/handlers/: account.rs  admin.rs  admin_providers.rs  auth.rs  centralized.rs  chat.rs  completions.rs  favicon.rs  groups.rs  keys.rs  messages.rs  mod.rs  models.html  models.rs  network.rs  privacy.rs  privacy.txt  providers_public.rs  share_keys.rs  try.html  try_page.rs  wallet.rs
gateway/src/providers/: anthropic_compat.rs  health.rs  mod.rs  openai_compat.rs  registry.rs
gateway/tests/: registry_and_scheduler.rs
mac-app/: .env.signing.example  .gitignore  CLAUDE.md  Package.swift  README.md  Supabase.plist.template  TEALE.md  bundle.sh
node/: Cargo.toml  Dockerfile  Dockerfile.cpu  README.md  teale-node.cluster.toml  teale-node.example.toml  teale-node.mesh.toml  teale-node.windows.toml
node/docs/: fleet-deployment-windows.md
node/gateway/: gateway.toml  models.yaml
node/gateway/src/: auth.rs  config.rs  error.rs  identity.rs  registry.rs  relay_client.rs  scheduler.rs  state.rs
node/gateway/src/handlers/: health.rs  metrics.rs
node/installer/: BUILD-INSTALLER.txt  check-update.ps1  post-install.ps1  teale-node-setup.iss  uninstall.ps1
node/linux-desktop/: build-package.sh  install.sh  uninstall.sh
node/protocol/: Cargo.toml
node/protocol/src/: apple_date.rs  hardware.rs  openai.rs
node/scripts/: cluster-runner.sh  deploy-windows.ps1
node/src/: backend.rs  cluster.rs  config.rs  gateway_wallet.rs  hardware.rs  identity.rs  inference.rs  litert.rs  main.rs  model_registry.rs  power_win.rs  privacy_filter.rs  relay.rs  status_server.rs  supervisor.rs  swap.rs  windows_model_catalog.rs
node/stress/: README.md
node/stress/scenarios/: cold_start.toml  steady_state.toml
node/stress/src/: loadgen.rs  record.rs  scenario.rs
node/teale-tray/: Cargo.toml
node/teale-tray/assets/: app.css  app.js  index.html
node/teale-tray/src/: linux_app.rs  main.rs  windows_app.rs
relay/: Dockerfile  README.md  fly.toml  package.json  server.ts
scripts/: bench-deepseek-v4-exo.sh  bench-deepseek-v4-gguf.sh  bench-ds4-openai.sh  bench-mac-fleet.sh  conductor-setup.sh  generate-version.sh  mesh-cluster-inventory.sh  mesh-llm-cluster-runner.sh  migrate-to-teale-mono.sh  privacy_filter_helper.py  teale-network-viz.py  validate-supabase-config.py
stress/: Cargo.toml  README.md  analyze.py
stress/scenarios/: burst.toml  fault_kill_backend.toml  mesh_dense405_agentic_steady.toml  mesh_kimi_agentic_burst.toml  mesh_kimi_agentic_steady.toml  mesh_kimi_fault_head.toml  mesh_kimi_fault_participant.toml  or_llama8b_baseline.toml  or_llama8b_burst.toml  or_llama8b_soak_15min.toml  or_llama8b_soak_20min.toml  or_llama8b_soak_30min.toml  or_llama8b_sustained.toml  or_readiness_5min.toml  or_readiness_hermes.toml  or_readiness_kimi.toml  soak_24h.toml
stress/src/: faults.rs  loadgen.rs  main.rs  record.rs  scenario.rs
(+460 files in other folders)
