[workspace]
members = ["node", "protocol", "gateway", "stress"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Shared core
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
dashmap = "6"

# Gateway-specific
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
prometheus = "0.13"

# Misc
async-trait = "0.1"
thiserror = "1"
parking_lot = "0.12"
once_cell = "1"
async-stream = "0.3"
toml = "0.8"

# In-tree crates (paths relative to this workspace root)
teale-protocol = { path = "protocol" }
