[package]
name = "teale-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "OpenAI-compatible gateway for TealeNet — fronts the relay and dispatches inference to the supply fleet"

[dependencies]
teale-protocol = { workspace = true }

tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
parking_lot = { workspace = true }
once_cell = { workspace = true }
async-stream = { workspace = true }
toml = { workspace = true }

axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
prometheus = { workspace = true }

serde_yaml = "0.9"
url = "2"

[dev-dependencies]
tokio = { workspace = true }
