[package]
name = "teale-node"
version = "0.1.0"
edition = "2021"
description = "Cross-platform TealeNet supply node agent"

[workspace]
members = [".", "protocol", "gateway", "stress"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Shared core
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] }
dashmap = "6"

# Gateway-specific
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
prometheus = "0.13"

# Misc
async-trait = "0.1"
thiserror = "1"
parking_lot = "0.12"
once_cell = "1"
async-stream = "0.3"
toml = "0.8"

# In-tree crates
teale-protocol = { path = "protocol" }

[dependencies]
teale-protocol = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }

toml = "0.8"
sysinfo = "0.32"
url = "2"
which = "7"
