[package]
name = "teale-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-platform TealeNet supply node agent"

[dependencies]
teale-protocol = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
clap = { workspace = true }

toml = "0.8"
sysinfo = "0.32"
url = "2"
which = "7"
