[package]
name = "teale-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared wire protocol types for TealeNet (relay, node, gateway)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
