[package]
name = "teale-tray"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "System-tray companion for teale-node — shows supply status + earnings"

[[bin]]
name = "teale-tray"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }

# OS interop for icon loading + (on Windows) the message loop.
[target.'cfg(windows)'.dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
webbrowser = "1"
ureq = { version = "2", default-features = false, features = ["json"] }
tray-icon = "0.19"
tao = "0.30"
wry = { version = "0.45", features = ["protocol"] }
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
